<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill"
    android:foregroundGravity="fill"
    android:gravity="fill"
    app:layout_anchorGravity="fill"
    app:layout_gravity="fill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/sucess" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".9"
            android:fontFamily="@font/handlee"
            android:gravity="center"
            android:text="@string/order_placed"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/msg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".85"
            android:fontFamily="@font/handlee"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/please_deliever_departure"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7">

            <Button
                android:id="@+id/done_req"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="130dp"
                android:layout_marginEnd="130dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/handlee"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="19sp" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>