<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/home"
    android:layout_height="match_parent"
    android:background="@drawable/homebg"
    tools:context=".other_service">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/logowhite" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/services"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/myviewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight=".9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                android:gravity="center"
                android:text="@string/request_service" />

            <Button
                android:id="@+id/booknow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:background="@color/colorPrimaryDark"
                android:text="@string/go"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>