<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/otherbg"
        android:orientation="vertical"
        android:weightSum="3"
        tools:context=".profile">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.15">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="false"
                android:layout_centerInParent="true"
                android:src="@drawable/profilepic" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/profile_layout"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:fontFamily="@font/handlee"
                    android:gravity="center"
                    android:text="@string/username_info"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".6"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/handlee"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/username"
                    android:textAllCaps="true"
                    android:textColor="@color/secondary_text"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:fontFamily="@font/handlee"
                    android:gravity="center"
                    android:text="@string/phone"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/userphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".6"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/handlee"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/secondary_text"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:visibility="gone"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:fontFamily="@font/handlee"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/useremail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".6"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/handlee"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/edit_email"
                    android:textColor="@color/secondary_text"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>